--- a/styles/index.css
+++ b/styles/index.css
@@ -96,7 +96,12 @@
 }
 
 #about {
-    height: calc(100vh - 4rem);
+    height: fit-content;
+
+    @media screen and (min-width: 768px) {
+        height: calc(100vh - 4rem);
+        
+    }
 }
 
 #about .container {
