--- a/styles/index.css
+++ b/styles/index.css
@@ -111,6 +111,7 @@
     align-items: center;
     justify-content: center;
     height: 100%;
+    z-index: 5;
 
     @media (min-width: 768px) {
         flex-direction: row;
